--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,19 @@
             "": "src/"
         }
     },
-    
+
     "require": {
         "php": "^7"
     },
 
     "require-dev": {
         "phpunit/phpunit": "^7"
+    },
+
+    "autoload-dev": {
+        "psr-4": {
+            "Transformer\\Tests\\": "src/"
+        }
     },
 
     "scripts": {
